# name: test_add_field[created_at.quarter-False]
  <class 'dict'> {
    'saveAnalyticsField': <class 'dict'> {
      'analyticsField': <class 'dict'> {
        'table': <class 'dict'> {
          'fields': <class 'dict'> {
            'edges': <class 'list'> [
              <class 'dict'> {
                'node': <class 'dict'> {
                  'alias': 'some_alias',
                  'dataSource': 'created_at.quarter',
                },
              },
            ],
          },
          'name': 'Bonnie Moreno',
        },
      },
      'clientMutationId': None,
    },
  }
---
# name: test_add_field[invalid_field-True]
  <class 'dict'> {
    'saveAnalyticsField': None,
  }
---
# name: test_add_field[meta.foobar-False]
  <class 'dict'> {
    'saveAnalyticsField': <class 'dict'> {
      'analyticsField': <class 'dict'> {
        'table': <class 'dict'> {
          'fields': <class 'dict'> {
            'edges': <class 'list'> [
              <class 'dict'> {
                'node': <class 'dict'> {
                  'alias': 'some_alias',
                  'dataSource': 'meta.foobar',
                },
              },
            ],
          },
          'name': 'Bonnie Moreno',
        },
      },
      'clientMutationId': None,
    },
  }
---
# name: test_add_field_validations[created_at.quarter-quarter-None-None]
  <class 'dict'> {
    'saveAnalyticsField': <class 'dict'> {
      'analyticsField': <class 'dict'> {
        'table': <class 'dict'> {
          'fields': <class 'dict'> {
            'edges': <class 'list'> [
              <class 'dict'> {
                'node': <class 'dict'> {
                  'alias': 'quarter',
                  'dataSource': 'created_at.quarter',
                },
              },
              <class 'dict'> {
                'node': <class 'dict'> {
                  'alias': 'existing',
                  'dataSource': 'meta.foobar',
                },
              },
            ],
          },
          'name': 'Bonnie Moreno',
        },
      },
      'clientMutationId': None,
    },
  }
---
# name: test_add_field_validations[invalid_field-foo-Specified data source 'invalid_field' is not available-dataSource]
  <class 'dict'> {
    'saveAnalyticsField': None,
  }
---
# name: test_add_field_validations[meta.baz-foobar-None-None]
  <class 'dict'> {
    'saveAnalyticsField': <class 'dict'> {
      'analyticsField': <class 'dict'> {
        'table': <class 'dict'> {
          'fields': <class 'dict'> {
            'edges': <class 'list'> [
              <class 'dict'> {
                'node': <class 'dict'> {
                  'alias': 'foobar',
                  'dataSource': 'meta.baz',
                },
              },
              <class 'dict'> {
                'node': <class 'dict'> {
                  'alias': 'existing',
                  'dataSource': 'meta.foobar',
                },
              },
            ],
          },
          'name': 'Bonnie Moreno',
        },
      },
      'clientMutationId': None,
    },
  }
---
# name: test_add_field_validations[meta.foobar-existing-duplicate key value violates unique constraint "unique_alias"-alias]
  <class 'dict'> {
    'saveAnalyticsField': None,
  }
---
# name: test_add_field_validations[meta.foobar-foobar-duplicate key value violates unique constraint "unique_data_source"-dataSource]
  <class 'dict'> {
    'saveAnalyticsField': None,
  }
---
# name: test_available_fields[None-None]
  <class 'dict'> {
    'analyticsTable': <class 'dict'> {
      'availableFields': <class 'dict'> {
        'edges': <class 'list'> [
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6Y2xvc2VkX2F0',
              'isLeaf': False,
              'label': 'closed_at',
              'sourcePath': 'closed_at',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6Y3JlYXRlZF9hdA==',
              'isLeaf': False,
              'label': 'created_at',
              'sourcePath': 'created_at',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6aWQ=',
              'isLeaf': True,
              'label': 'id',
              'sourcePath': 'id',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6bWV0YQ==',
              'isLeaf': False,
              'label': 'Meta',
              'sourcePath': 'meta',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6c3RhdHVz',
              'isLeaf': True,
              'label': 'status',
              'sourcePath': 'status',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6dGFza19pZA==',
              'isLeaf': True,
              'label': 'task_id',
              'sourcePath': 'task_id',
            },
          },
        ],
      },
    },
  }
---
# name: test_available_fields[created_at-1]
  <class 'dict'> {
    'analyticsTable': <class 'dict'> {
      'availableFields': <class 'dict'> {
        'edges': <class 'list'> [
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6Y3JlYXRlZF9hdC5tb250aA==',
              'isLeaf': True,
              'label': 'month',
              'sourcePath': 'created_at.month',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6Y3JlYXRlZF9hdC5xdWFydGVy',
              'isLeaf': True,
              'label': 'quarter',
              'sourcePath': 'created_at.quarter',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6Y3JlYXRlZF9hdC53ZWVrZGF5',
              'isLeaf': True,
              'label': 'weekday',
              'sourcePath': 'created_at.weekday',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6Y3JlYXRlZF9hdC55ZWFy',
              'isLeaf': True,
              'label': 'year',
              'sourcePath': 'created_at.year',
            },
          },
        ],
      },
    },
  }
---
# name: test_available_fields[created_at-2]
  <class 'dict'> {
    'analyticsTable': <class 'dict'> {
      'availableFields': <class 'dict'> {
        'edges': <class 'list'> [
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6Y3JlYXRlZF9hdC5tb250aA==',
              'isLeaf': True,
              'label': 'month',
              'sourcePath': 'created_at.month',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6Y3JlYXRlZF9hdC5xdWFydGVy',
              'isLeaf': True,
              'label': 'quarter',
              'sourcePath': 'created_at.quarter',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6Y3JlYXRlZF9hdC53ZWVrZGF5',
              'isLeaf': True,
              'label': 'weekday',
              'sourcePath': 'created_at.weekday',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6Y3JlYXRlZF9hdC55ZWFy',
              'isLeaf': True,
              'label': 'year',
              'sourcePath': 'created_at.year',
            },
          },
        ],
      },
    },
  }
---
# name: test_available_fields[created_at.year-1]
  <class 'dict'> {
    'analyticsTable': <class 'dict'> {
      'availableFields': <class 'dict'> {
        'edges': <class 'list'> [
        ],
      },
    },
  }
---
# name: test_available_fields[meta-1]
  <class 'dict'> {
    'analyticsTable': <class 'dict'> {
      'availableFields': <class 'dict'> {
        'edges': <class 'list'> [
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6bWV0YS5mb29iYXI=',
              'isLeaf': True,
              'label': "Key 'foobar'",
              'sourcePath': 'meta.foobar',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6bWV0YS50ZXN0LWtleQ==',
              'isLeaf': True,
              'label': "Key 'test-key'",
              'sourcePath': 'meta.test-key',
            },
          },
        ],
      },
    },
  }
---
# name: test_create_table
  <class 'dict'> {
    'saveAnalyticsTable': <class 'dict'> {
      'analyticsTable': <class 'dict'> {
        'availableFields': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'isLeaf': False,
                'label': 'closed_at',
                'sourcePath': 'closed_at',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'isLeaf': False,
                'label': 'created_at',
                'sourcePath': 'created_at',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'isLeaf': True,
                'label': 'id',
                'sourcePath': 'id',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'isLeaf': False,
                'label': 'Meta',
                'sourcePath': 'meta',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'isLeaf': True,
                'label': 'status',
                'sourcePath': 'status',
              },
            },
          ],
        },
        'name': 'Test table thingy',
      },
    },
  }
---
# name: test_full_field_list[False]
  <class 'list'> [
    'closed_at',
    'closed_at.month',
    'closed_at.quarter',
    'closed_at.weekday',
    'closed_at.year',
    'created_at',
    'created_at.month',
    'created_at.quarter',
    'created_at.weekday',
    'created_at.year',
    'document[top_form]',
    'document[top_form].form',
    'document[top_form].form.sub_question',
    'document[top_form].top_question',
    'id',
    'meta',
    'meta.foobar',
    'meta.test-key',
    'status',
    'workitem[baby-room-note,first]',
    'workitem[baby-room-note,first].closed_at',
    'workitem[baby-room-note,first].closed_at.month',
    'workitem[baby-room-note,first].closed_at.quarter',
    'workitem[baby-room-note,first].closed_at.weekday',
    'workitem[baby-room-note,first].closed_at.year',
    'workitem[baby-room-note,first].created_at',
    'workitem[baby-room-note,first].created_at.month',
    'workitem[baby-room-note,first].created_at.quarter',
    'workitem[baby-room-note,first].created_at.weekday',
    'workitem[baby-room-note,first].created_at.year',
    'workitem[baby-room-note,first].deadline',
    'workitem[baby-room-note,first].deadline.month',
    'workitem[baby-room-note,first].deadline.quarter',
    'workitem[baby-room-note,first].deadline.weekday',
    'workitem[baby-room-note,first].deadline.year',
    'workitem[baby-room-note,first].document[someone-mother]',
    'workitem[baby-room-note,first].meta',
    'workitem[baby-room-note,first].meta.foobar',
    'workitem[baby-room-note,first].meta.test-key',
    'workitem[baby-room-note,first].name',
    'workitem[baby-room-note,first].status',
    'workitem[baby-room-note,firstclosed]',
    'workitem[baby-room-note,firstclosed].closed_at',
    'workitem[baby-room-note,firstclosed].closed_at.month',
    'workitem[baby-room-note,firstclosed].closed_at.quarter',
    'workitem[baby-room-note,firstclosed].closed_at.weekday',
    'workitem[baby-room-note,firstclosed].closed_at.year',
    'workitem[baby-room-note,firstclosed].created_at',
    'workitem[baby-room-note,firstclosed].created_at.month',
    'workitem[baby-room-note,firstclosed].created_at.quarter',
    'workitem[baby-room-note,firstclosed].created_at.weekday',
    'workitem[baby-room-note,firstclosed].created_at.year',
    'workitem[baby-room-note,firstclosed].deadline',
    'workitem[baby-room-note,firstclosed].deadline.month',
    'workitem[baby-room-note,firstclosed].deadline.quarter',
    'workitem[baby-room-note,firstclosed].deadline.weekday',
    'workitem[baby-room-note,firstclosed].deadline.year',
    'workitem[baby-room-note,firstclosed].document[someone-mother]',
    'workitem[baby-room-note,firstclosed].meta',
    'workitem[baby-room-note,firstclosed].meta.foobar',
    'workitem[baby-room-note,firstclosed].meta.test-key',
    'workitem[baby-room-note,firstclosed].name',
    'workitem[baby-room-note,firstclosed].status',
    'workitem[baby-room-note,last]',
    'workitem[baby-room-note,last].closed_at',
    'workitem[baby-room-note,last].closed_at.month',
    'workitem[baby-room-note,last].closed_at.quarter',
    'workitem[baby-room-note,last].closed_at.weekday',
    'workitem[baby-room-note,last].closed_at.year',
    'workitem[baby-room-note,last].created_at',
    'workitem[baby-room-note,last].created_at.month',
    'workitem[baby-room-note,last].created_at.quarter',
    'workitem[baby-room-note,last].created_at.weekday',
    'workitem[baby-room-note,last].created_at.year',
    'workitem[baby-room-note,last].deadline',
    'workitem[baby-room-note,last].deadline.month',
    'workitem[baby-room-note,last].deadline.quarter',
    'workitem[baby-room-note,last].deadline.weekday',
    'workitem[baby-room-note,last].deadline.year',
    'workitem[baby-room-note,last].document[someone-mother]',
    'workitem[baby-room-note,last].meta',
    'workitem[baby-room-note,last].meta.foobar',
    'workitem[baby-room-note,last].meta.test-key',
    'workitem[baby-room-note,last].name',
    'workitem[baby-room-note,last].status',
    'workitem[baby-room-note,lastclosed]',
    'workitem[baby-room-note,lastclosed].closed_at',
    'workitem[baby-room-note,lastclosed].closed_at.month',
    'workitem[baby-room-note,lastclosed].closed_at.quarter',
    'workitem[baby-room-note,lastclosed].closed_at.weekday',
    'workitem[baby-room-note,lastclosed].closed_at.year',
    'workitem[baby-room-note,lastclosed].created_at',
    'workitem[baby-room-note,lastclosed].created_at.month',
    'workitem[baby-room-note,lastclosed].created_at.quarter',
    'workitem[baby-room-note,lastclosed].created_at.weekday',
    'workitem[baby-room-note,lastclosed].created_at.year',
    'workitem[baby-room-note,lastclosed].deadline',
    'workitem[baby-room-note,lastclosed].deadline.month',
    'workitem[baby-room-note,lastclosed].deadline.quarter',
    'workitem[baby-room-note,lastclosed].deadline.weekday',
    'workitem[baby-room-note,lastclosed].deadline.year',
    'workitem[baby-room-note,lastclosed].document[someone-mother]',
    'workitem[baby-room-note,lastclosed].meta',
    'workitem[baby-room-note,lastclosed].meta.foobar',
    'workitem[baby-room-note,lastclosed].meta.test-key',
    'workitem[baby-room-note,lastclosed].name',
    'workitem[baby-room-note,lastclosed].status',
  ]
---
# name: test_full_field_list[True]
  <class 'dict'> {
    'analyticsTable': <class 'dict'> {
      'availableFields': <class 'dict'> {
        'edges': <class 'list'> [
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6YW5zd2Vyc1tyb3dfZm9ybV0=',
              'isLeaf': False,
              'label': 'answers[row_form]',
              'sourcePath': 'answers[row_form]',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6YW5zd2Vyc1tyb3dfZm9ybV0uY29sdW1u',
              'isLeaf': True,
              'label': 'column',
              'sourcePath': 'answers[row_form].column',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6YW5zd2Vyc1tzb21lb25lLW1vdGhlcl0=',
              'isLeaf': False,
              'label': 'answers[someone-mother]',
              'sourcePath': 'answers[someone-mother]',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6YW5zd2Vyc1tzdWJfZm9ybV0=',
              'isLeaf': False,
              'label': 'answers[sub_form]',
              'sourcePath': 'answers[sub_form]',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6YW5zd2Vyc1tzdWJfZm9ybV0uc3ViX3F1ZXN0aW9u',
              'isLeaf': True,
              'label': 'sub_question',
              'sourcePath': 'answers[sub_form].sub_question',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6YW5zd2Vyc1tzdWdnZXN0LWFkdWx0LWFsbG93XQ==',
              'isLeaf': False,
              'label': 'answers[suggest-adult-allow]',
              'sourcePath': 'answers[suggest-adult-allow]',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6YW5zd2Vyc1t0b3BfZm9ybV0=',
              'isLeaf': False,
              'label': 'answers[top_form]',
              'sourcePath': 'answers[top_form]',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6YW5zd2Vyc1t0b3BfZm9ybV0uZm9ybQ==',
              'isLeaf': False,
              'label': 'form',
              'sourcePath': 'answers[top_form].form',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6YW5zd2Vyc1t0b3BfZm9ybV0uZm9ybS5zdWJfcXVlc3Rpb24=',
              'isLeaf': True,
              'label': 'sub_question',
              'sourcePath': 'answers[top_form].form.sub_question',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6YW5zd2Vyc1t0b3BfZm9ybV0udG9wX3F1ZXN0aW9u',
              'isLeaf': True,
              'label': 'top_question',
              'sourcePath': 'answers[top_form].top_question',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6Y3JlYXRlZF9hdA==',
              'isLeaf': False,
              'label': 'created_at',
              'sourcePath': 'created_at',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6Y3JlYXRlZF9hdC5tb250aA==',
              'isLeaf': True,
              'label': 'month',
              'sourcePath': 'created_at.month',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6Y3JlYXRlZF9hdC5xdWFydGVy',
              'isLeaf': True,
              'label': 'quarter',
              'sourcePath': 'created_at.quarter',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6Y3JlYXRlZF9hdC53ZWVrZGF5',
              'isLeaf': True,
              'label': 'weekday',
              'sourcePath': 'created_at.weekday',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6Y3JlYXRlZF9hdC55ZWFy',
              'isLeaf': True,
              'label': 'year',
              'sourcePath': 'created_at.year',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6Zm9ybV9pZA==',
              'isLeaf': True,
              'label': 'form_id',
              'sourcePath': 'form_id',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6aWQ=',
              'isLeaf': True,
              'label': 'id',
              'sourcePath': 'id',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6bWV0YQ==',
              'isLeaf': False,
              'label': 'Meta',
              'sourcePath': 'meta',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6bWV0YS5mb29iYXI=',
              'isLeaf': True,
              'label': "Key 'foobar'",
              'sourcePath': 'meta.foobar',
            },
          },
          <class 'dict'> {
            'node': <class 'dict'> {
              'id': 'QXZhaWxhYmxlRmllbGQ6bWV0YS50ZXN0LWtleQ==',
              'isLeaf': True,
              'label': "Key 'test-key'",
              'sourcePath': 'meta.test-key',
            },
          },
        ],
      },
    },
  }
---
# name: test_update_field
  <class 'dict'> {
    'saveAnalyticsField': <class 'dict'> {
      'analyticsField': <class 'dict'> {
        'table': <class 'dict'> {
          'fields': <class 'dict'> {
            'edges': <class 'list'> [
              <class 'dict'> {
                'node': <class 'dict'> {
                  'alias': 'existing_new_alias',
                  'dataSource': 'meta.foobar',
                },
              },
            ],
          },
          'name': 'Bonnie Moreno',
        },
      },
      'clientMutationId': None,
    },
  }
---
